k8s/network/redis-deploy.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
spec:
  serviceName: "redis-service"
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:latest
        command: ["redis-server", "/usr/local/etc/redis/redis.conf"]
        ports:
        - containerPort: 6379
        volumeMounts:
        - name: redis-config-volume
          mountPath: /usr/local/etc/redis/
        - name: redis-data
          mountPath: /data
      volumes:
      - name: redis-config-volume
        configMap:
          name: redis-config
  volumeClaimTemplates: # PVC를 자동으로 생성해주는 템플릿
  - metadata:
      name: redis-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 2Gi # 초기 용량 설정
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  ports:
  - port: 6379
  selector:
    app: redis
  clusterIP: None # StatefulSet은 개별 파드 식별을 위해 Headless Service를 권장합니다.
